# PM4PA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  logging_config.py
src/agents/: __init__.py  base.py  bpmn.py  judge.py  relevance.py  retrieval.py  retrieval_bpmn.py  validation.py
src/app/: __init__.py  ingestion.py  pipeline.py  run_request.py
src/bpmn_service/: __init__.py  service_submitter.py
src/eval/: __init__.py  dataset_loader.py  evaluation.md  gold_template_flat.json  gold_template_nested.json  metrics.py  run_evaluation.py  tracker.py
src/eval/FinalEvaluationMetrics/Closed Source/setting_1_closed_source/: aggregated_statistics_nodes.json  meta.json  per_run_per_sample.json
src/eval/FinalEvaluationMetrics/Closed Source/setting_2_closed_source/: aggregated_statistics_nodes.json  meta.json  per_run_per_sample.json
src/graphs/: __init__.py  pipeline_graphs.py
src/infrastructure/api/: __init__.py  ollama_client.py  openwebui_client.py
src/infrastructure/ingestion/: __init__.py  document_processor.py
src/infrastructure/ingestion/chunking/: __init__.py  text_preprocessor.py
src/infrastructure/ingestion/parsers/: __init__.py  document_parser.py
src/infrastructure/retrieval/: __init__.py  keyword_search.py
src/infrastructure/vector_store/: chroma_store.py
src/models/: __init__.py  artifacts.py  bpmn.py  query_structure.py  relevance.py  state.py
src/web/: __init__.py  streamlit_app.py
src/web/.streamlit/: config.toml
(+24 files in other folders)
